--- a/templates/styles/empresa.css
+++ b/templates/styles/empresa.css
@@ -1,39 +1,5 @@
-@font-face {
-    font-family: "../fonts/lato-regular";
-    src: url("../fonts/lato-regular.ttf") format("truetype"),
-    url("../fonts/lato-regular.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@page {
-    margin: 0in;
-    background-image: url("membrete.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "../fonts/lato-regular", sans-serif;
-}
-
-body {
-    font-size: 9px;
-    line-height: 1.2;
-    margin: 0;
-}
-
 .label-bg {
     background-color: #e7e7e7;
-}
-
-.container {
-    margin: 0 auto;
-    background-color: transparent;
-    padding: 25px;
 }
 
 .header {
@@ -47,10 +13,13 @@ body {
 }
 
 .importante {
+    position: relative;
+    top:-20px;
     padding: 5px;
-    margin: 10px 0;
+    margin: 10px 5px;
     border: 1px solid #ccc;
     font-size: 8px;
+    width: 50%;
 }
 
 .header::after {
@@ -78,15 +47,15 @@ body {
 }
 
 .section-header {
-    padding: 2px 3px;
+    padding: 3px;
     font-weight: bold;
-    font-size: 7px;
+    font-size: 8px;
     margin-bottom: 0px;
     color: #000;
     background-color: #89bd94;
-    border-top: 1px solid #61a770;
-    border-left: 1px solid #75b182;
-    border-right: 1px solid #75b182;
+    border-top: 1px solid #444;
+    border-left: 1px solid #444;
+    border-right: 1px solid #444;
     border-bottom: none;
     margin-top: 5px;
 }
@@ -94,30 +63,6 @@ body {
 .section-content {
     padding: 0px;
     border: 1px solid #000;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 0px;
-}
-
-table td,
-table th {
-    border: 1px solid #000;
-    padding: 3px;
-    font-size: 7px;
-}
-
-table th {
-    font-weight: bold;
-    text-align: left;
-}
-
-table th.label,
-table td.label {
-    background: #f5f5f5;
-    color: #000;
 }
 
 .d-flex {
@@ -180,9 +125,6 @@ table td.label {
 }
 
 h1 {
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
     flex: 1;
 }
 
@@ -216,7 +158,7 @@ h1 {
 .instructions {
     top: 140px;
     position: absolute;
-    margin: 8px 0;
+    margin: 8px 0px;
     padding-left: 20px;
 }
 
@@ -235,12 +177,6 @@ h1 {
 
 .section {
     margin: 10px 0;
-}
-
-.sello-section {
-    position: absolute;
-    bottom: 18px;
-    right: 80px;
 }
 
 .text {
@@ -331,7 +267,3 @@ h1 {
     color: #3f4e46;
 }
 
-.sello {
-    width: 120px;
-    height: 90px;
-}
